# vscode-devcontainer-python

./: .coverage  .gitignore  mypy.ini  pyproject.toml  requirements-dev.txt  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
mymodule/: get_ip.py  main.py
mymodule/lib/: http_bin_client.py
tests/: test_http_bin_client.py
